[gd_scene load_steps=3 format=3 uid="uid://ca5fiyc4w34pp"]

[ext_resource type="FontFile" uid="uid://c2xs02gn1854n" path="res://assets/fonts/Golden Varsity Outline.ttf" id="1_5gvo0"]
[ext_resource type="Script" uid="uid://bgaw378530u8t" path="res://levels/PauseMenu.gd" id="1_wlreh"]

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 2
script = ExtResource("1_wlreh")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -116.0
offset_top = 56.0
offset_right = -116.0
offset_bottom = 56.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0, 0, 0, 0)

[node name="Panel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2

[node name="VContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.5
offset_top = -73.0
offset_right = 124.5
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80
alignment = 1

[node name="ScoreLabel" type="Label" parent="Panel/VContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_5gvo0")
theme_override_font_sizes/font_size = 40
text = "Score 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HContainer" type="HBoxContainer" parent="Panel/VContainer"]
layout_mode = 2
theme_override_constants/separation = 90
alignment = 1

[node name="ButtonBack" type="Button" parent="Panel/VContainer/HContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5gvo0")
theme_override_font_sizes/font_size = 20
text = "Voltar"
flat = true

[node name="ButtonContinue" type="Button" parent="Panel/VContainer/HContainer"]
layout_mode = 2
focus_mode = 0
theme_override_fonts/font = ExtResource("1_5gvo0")
theme_override_font_sizes/font_size = 20
text = "Continuar"
flat = true
